--- a/static/css/form.css
+++ b/static/css/form.css
@@ -301,6 +301,42 @@ button:hover {
     margin-bottom: 40px;
 }
 
+
+.contenedor-tortas-inversion {
+    width: 80%;
+    /*max-width: 1100px;     /* controla el ancho visual */
+    margin: 40px auto;     /* centra el bloque */
+    padding: 0 40px;       /* margen lateral suave */
+    
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#grafico-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tabla-box {
+    flex: 1 0 10px;           /* crece y se encoge, mínimo 300px */
+}
+
+#tortainversion {
+    width: 260px;
+    height: 260px;
+    border-radius: 50%;
+    margin-top: 80px;
+}
+
+.grafico-box select {
+    margin-bottom: 40px; /* espacio entre select y canvas */
+    width: 200px;        /* opcional, para que no quede demasiado ancho */
+}
+
 .contendor_educacion {
     width: 70%;
     /*max-width: 1100px;*/
